<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/BackgroundRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/dimen_16">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:hint="@string/title_email"
        android:minWidth="@dimen/dimen_488"
        app:errorEnabled="true"
        app:errorIconDrawable="@null"
        app:helperText="example@gmail.com"
        app:helperTextEnabled="true"
        app:startIconDrawable="@drawable/baseline_email_24">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/TextContent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:imeOptions="actionNext"
            android:inputType="textPersonName"
            android:maxEms="1"
            android:maxLines="1"
            android:paddingHorizontal="@dimen/dimen_8"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:hint="@string/title_password"
        android:minWidth="@dimen/dimen_488"
        app:errorEnabled="true"
        app:errorIconDrawable="@null">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/TextContent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:imeOptions="actionNext"
            android:inputType="text|textPassword"
            android:maxEms="1"
            android:maxLength="20"
            android:maxLines="1"
            android:paddingHorizontal="@dimen/dimen_8"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_not_have_an_account"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btnSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_sign_up"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>