<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:cardCornerRadius="@dimen/dimen_16">

        <androidx.appcompat.widget.LinearLayoutCompat
            style="@style/BackgroundContentRoot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="@dimen/dimen_16">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgRating"
                android:layout_width="@dimen/dimen_80"
                android:layout_height="@dimen/dimen_80"
                android:layout_marginVertical="@dimen/dimen_16"
                android:src="@drawable/rate_none" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvTitle"
                style="@style/TextContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/dimen_10"
                android:text="@string/content_rate_app_1"
                android:textSize="@dimen/text_size_14sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvText"
                style="@style/TextContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/content_rate_app_2"
                android:textSize="@dimen/text_size_12sp" />

            <androidx.appcompat.widget.AppCompatRatingBar
                android:id="@+id/ratingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_16"
                android:theme="@style/MyRatingBar" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_8"
                android:gravity="center">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/btnCancel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dimen_16"
                    android:layout_weight="1"
                    app:cardBackgroundColor="@color/button_cancel"
                    app:cardCornerRadius="@dimen/dimen_16"
                    app:cardElevation="@dimen/dimen_0">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingVertical="@dimen/dimen_10"
                        android:text="@string/button_cancel"
                        android:textColor="@color/white" />

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnRateApp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/content_rate_app"
                    android:textColor="@color/white" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </com.google.android.material.card.MaterialCardView>
</FrameLayout>