<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:fitsSystemWindows="true">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:cardCornerRadius="@dimen/dimen_16">

        <androidx.appcompat.widget.LinearLayoutCompat
            style="@style/BackgroundContentRoot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:minWidth="@dimen/dimen_250"
            android:orientation="vertical"
            android:padding="@dimen/dimen_16">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvTitle"
                style="@style/TextTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/content_date_format" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/lnItem12Hour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingStart="@dimen/dimen_16"
                android:paddingTop="@dimen/dimen_16"
                android:paddingBottom="@dimen/dimen_8">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/TextContent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/dialog_time_format_12" />

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/cbItem12Hour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/checkbox_state_checked" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/lnItem24Hour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingStart="@dimen/dimen_16"
                android:paddingTop="@dimen/dimen_8"
                android:paddingBottom="@dimen/dimen_16">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/TextContent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/dialog_time_format_24" />

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/cbItem24Hour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/checkbox_state_checked" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="@dimen/dimen_12"
                android:text="@string/button_save"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_20sp"
                app:cornerRadius="@dimen/dimen_13" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </com.google.android.material.card.MaterialCardView>
</FrameLayout>