<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        style="@style/BackgroundContentRoot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTitleAppbar"
            style="@style/TextTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingVertical="@dimen/dimen_8"
            android:text="@string/title_information" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btnBack"
            style="@style/ButtonBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:padding="@dimen/dimen_16"
            android:src="@drawable/baseline_arrow_back_24" />
    </FrameLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        style="@style/BackgroundContentRoot"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginVertical="@dimen/dimen_1"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="@dimen/dimen_16">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/TextContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/title_email" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvEmail"
                style="@style/TextContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                tools:text="example@gmail.com" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btnDeleteUser"
        style="@style/BackgroundContentRoot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="center"
        android:paddingVertical="@dimen/dimen_10"
        android:text="@string/title_delete_account"
        android:textColor="@color/redTitle"
        android:textSize="@dimen/text_size_16sp" />
</androidx.appcompat.widget.LinearLayoutCompat>